--- a/rock-paper-scissors/css/styles.css
+++ b/rock-paper-scissors/css/styles.css
@@ -72,10 +72,11 @@ header h1 {
 
 .choice {
 	/*border: 4px solid white;*/
-	border: 25px solid white;
-	border-radius: 50%;
+	/*border: 25px solid white;*/
+	/*border-radius: 50%;*/
+	border: 2px solid white
 	margin: 0 20px
-	padding: 15px;
+	padding: 15px 10px 15px 15px;
 	display: inline-block;
 	transition: all 0.3s ease;
 }
@@ -92,4 +93,19 @@ header h1 {
 	font-weight: bold;
 	font-size: 20px;
 	margin-top: 20px;
+}
+
+.green-glow {
+	border:4px solid #4dcc7d;
+	box-shadow: 00 10px #31b43a;
+}
+
+.red-glow {
+	border:4px solid #fc121b;
+	box-shadow: 00 10px #d01115;
+}
+
+.gray-glow {
+	border:4px solid #464647;
+	box-shadow: 00 10px #25292b;
 }
