--- a/rock-paper-scissors/css/styles.css
+++ b/rock-paper-scissors/css/styles.css
@@ -2,7 +2,7 @@
 
 * {
 	margin: 0;
-	padding: 0
+	padding: 0;
 	box-sizing: border-box;
 }
 
@@ -74,8 +74,8 @@ header h1 {
 	/*border: 4px solid white;*/
 	/*border: 25px solid white;*/
 	/*border-radius: 50%;*/
-	border: 2px solid white
-	margin: 0 20px
+	border: 2px solid white;
+	margin: 0 20px;
 	padding: 15px 10px 15px 15px;
 	display: inline-block;
 	transition: all 0.3s ease;
